<resources>
    <string name="app_name">ShoppingList</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username2">Username:</string>
    <string name="email">Email:</string>
    <string name="password2">Password:</string>
    <string name="welcome">Welcome</string>
    <string name="welcome2">WELCOME</string>
    <string name="new_list">New List</string>
    <string name="see_my_lists">See My Lists</string>
    <string name="naslov_liste">Naslov liste</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="shared_list">Shared List:</string>
    <string name="save">Save</string>
    <string name="naslov">NASLOV</string>
</resources>